# stealthy-stats

./: .dockerignore  LICENSE.md  README.md  docker-compose.dev.yml  docker-compose.yml
.github/workflows/: check.data.yml  data-check.yml  docker.data.yml  project-todo.yml
apps/data/: .gitignore  Dockerfile  docker-compose.dev.yml  docker-compose.yml  main.py  pyproject.toml
apps/data/.zed/: settings.json
apps/data/app/models/: __init__.py  etag.py
apps/data/app/models/tba/: __init__.py  alliance.py  district.py  event.py  event_ranking_info.py  match.py  match_alliance.py  ranking.py  ranking_info.py  team.py
apps/data/app/pipeline/flows/: __init__.py  full_sync.py  live_sync.py  year_sync.py
apps/data/app/pipeline/tasks/: __init__.py  sync_alliances.py  sync_event_teams.py  sync_events.py  sync_matches.py  sync_rankings.py  sync_teams.py
apps/data/app/pipeline/tasks/tba/: __init__.py  sync_alliances.py  sync_districts.py  sync_event_teams.py  sync_events.py  sync_matches.py  sync_rankings.py  sync_teams.py
apps/data/app/services/: __init__.py  db.py  tba.py
apps/data/app/types/: __init__.py  event_filter.py  sync_type.py
apps/data/app/utils/: __init__.py  batch_accumulator.py
apps/data/src/data/.zed/: settings.json
apps/data/src/data/models/tba/: __init__.py
apps/data/src/data/services/: __init__.py  db_service.py  tba_service.py
data/: pyproject.toml
data/src/data/models/tba/: __init__.py  district.py  event.py  team.py
data/src/data/services/: tba_service.py
