[project]
name = "data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "httpx>=0.28.1",
    "polars>=1.35.2",
    "prefect>=3.6.5",
    "psycopg>=3.3.1",
    "pydantic-settings>=2.12.0",
]

[dependency-groups]
dev = [
    "pyright>=1.1.407",
    "ruff>=0.14.8",
    "taskipy>=1.14.1",
]
