[project]
name = "data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "httpx>=0.28.1",
  "polars>=1.35.2",
  "prefect>=3.6.5",
  "psycopg2-binary>=2.9.11",
  "pydantic-settings>=2.12.0",
  "sqlmodel>=0.0.27",
]

[dependency-groups]
dev = [
  "pyright>=1.1.407",
  "ruff>=0.14.8",
  "taskipy>=1.14.1",
]

[tool.uv]
package = false
